...
                                <rect key="frame" x="60" y="283.66666666666669" width="270" height="43"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="43" id="6Yv-Uw-aBW"/>
                                    <constraint firstAttribute="width" constant="270" id="LAo-Wf-WdX"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pdO-ma-MDo">
                                <rect key="frame" x="100" y="286" width="230" height="38"/>
                                <accessibility key="accessibilityConfiguration">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="38" id="ZFb-WX-SO4"/>
                                    <constraint firstAttribute="width" constant="230" id="jBc-Wn-Mpb"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next" smartDashesType="no" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3o-LH-iVo">
                                <rect key="frame" x="100" y="340" width="230" height="34"/>
                                <accessibility key="accessibilityConfiguration">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="HVL-45-j1e"/>
...
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="width" constant="270" id="55V-dk-zd5"/>
                                    <constraint firstAttribute="height" constant="34" id="bAu-Lo-eSw"/>
                                </constraints>
                                <state key="normal" title="Accedi">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="accedi:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ntw-sS-158"/>
                                </connections>
                            </button>
...
