...
        return cell
    }
    

    override func viewDidLoad() {
        super.viewDidLoad()
        let avantiButton = UIBarButtonItem(title: "Avanti", style: .bordered, target: self, action: #selector(avanti(sender:)))
           self.navigationItem.rightBarButtonItem  = avantiButton
    
        let s = SintomiViewModel()
        
        s.ottieniTuttiSintomi{(sintomi) in
            
...
