...
    func tableView(_ tableView: UITableView, heightForRowAt indexPath: IndexPath) -> CGFloat {
        return UITableView.automaticDimension
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        let inviaButton = UIBarButtonItem(title: "Invia", style: .bordered, target: self, action: #selector(invia(sender:)))
           self.navigationItem.rightBarButtonItem  = inviaButton
    }
    
    @objc func invia(sender: Any){
        
        var index: Int = 0
...
